--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,8 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+
+    <script src="./pub/script.js"></script>
+    <link rel="stylesheet" href="./pub/style.css">
+
+
+    <!-- swiper library -->
+    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
+    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+
+
 </head>
 <body>
-    
+    <div id="root">
+        
+    </div>
 </body>
 </html>
