--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,19 +7,19 @@
     <title>Document</title>
 
 
-    <script src="./pub/script.js"></script>
+    <script src="./dist/main.js"></script>
     <link rel="stylesheet" href="./pub/style.css">
 
-
-    <!-- swiper library -->
+<!-- 
+    swiper library 
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
-
+ -->
 
 </head>
 <body>
     <div id="root">
-        
+
     </div>
 </body>
 </html>
